--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -1,3 +1,12 @@
-<p>
-  clients works!
-</p>
+<h3>{{title}}</h3>
+<div class="row">
+    <button class="btn btn-lg btn-info" [class.active]="filterBy=='all'" (click)="filterBy='all'">All</button>
+    <ul id="thumbnailsList">
+        <li *ngFor="let client of ( visibleClients | clientFilter:filterBy )">
+            <a [routerLink] = "['/client', client.id]">
+                <!-- the routerLink bind results in a URL path like "/client/3" where 3 is the id value for the client of the *ngFor directive -->
+                <img src="{{client.photo}}" class="tn" width="200" height="160">
+            </a>
+        </li>
+    </ul>
+</div>
