--- a/src/app/project/project-detail.component.css
+++ b/src/app/project/project-detail.component.css
@@ -19,3 +19,14 @@
     padding: 24px;
     text-align: center;
 }
+ul {
+    padding:0;
+    width: 1200px;
+    margin: 20px auto
+}
+li {
+    display: inline
+}
+.img-container {
+    background-size: contain
+}
