--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,8 +1,6 @@
-<h3>{{title}}</h3>
+<h3>{{filterBy | titlecase}} projects</h3>
 <div class="row">
     <button class="btn btn-lg btn-info" [class.active]="filterBy=='all'" (click)="filterBy='all'">All</button>
-    <button class="btn btn-lg btn-info" [class.active]="filterBy=='japanese'" (click)="filterBy='japanese'">Japanese</button>
-    <button class="btn btn-lg btn-info" [class.active]="filterBy=='neo-traditional'" (click)="filterBy='neo-traditional'">Neo-Traditional</button>
     <ul id="thumbnailsList">
         <li *ngFor="let project of ( visibleProjects | projectFilter:filterBy )">
             <a [routerLink] = "['/project', project.id]">
