--- a/src/app/client/client-detail.component.css
+++ b/src/app/client/client-detail.component.css
@@ -1,3 +1,22 @@
+.col-md-12 {
+    padding-left: 4px;
+    padding-bottom: 18px;
+}
+.media {
+    padding-top: 18px;
+    padding-bottom: 18px;
+}
+#client-photo {
+    border: 4px solid #eee;
+    box-shadow: #555 1px 1px 8px 1px;
+}
+.media-body {
+    flex: none; /* removed this so we could have the client detials collapse */
+    padding-left: 18px
+}
+.media-body p {
+    padding-left: 18px
+}
 #name {
     font-size: 1.5em;
     font-family: 'Open Sans', sans-serif;
