--- a/src/app/client/client-detail.component.css
+++ b/src/app/client/client-detail.component.css
@@ -1,5 +1,6 @@
-.col-md-12 {
-    padding-left: 4px;
+.client-row {
+    padding-top: 18px;
+    padding-left: 0px;
     padding-bottom: 18px;
 }
 .media {
@@ -10,37 +11,13 @@
     border: 4px solid #eee;
     box-shadow: #555 1px 1px 8px 1px;
 }
-.media-body {
-    flex: none; /* removed this so we could have the client detials collapse */
-    padding-left: 18px
-}
-.media-body p {
-    padding-left: 18px
-}
-#name {
-    font-size: 1.5em;
+.project-header {
+    font-size: 1.2em;
     font-family: 'Open Sans', sans-serif;
     padding: 18px;
     color: #222;
-    border: 1px solid #bbb;
-    width: 900px;
 }
-.name-row {
-    padding: 24px;
-    text-align: center;
-}
-#photo {
-    font-size: 1.5em;
-    font-family: 'Open Sans', sans-serif;
-    padding: 18px;
-    color: #222;
-    border: 1px solid #bbb;
-    /*width: 900px;*/
-}
-.photo-row {
-    padding: 24px;
-    text-align: center;
-}
+
 ul {
     padding:0;
     width: 1200px;
