--- a/src/app/client/client-detail.component.html
+++ b/src/app/client/client-detail.component.html
@@ -1,26 +1,32 @@
-<div class="row">
-    <div class="col-md-12">
-        <div class="media">
-            <img id="client-photo" class="mr-3" alt={{client.name}} src={{client.photo}} width="200" />
-            <div class="media-body">
-                <h5 class="mt-0">
-                    {{client.name}}
-                </h5>
-                <p>
-                    <a href="mailto:{{client.email}}">{{client.email}}</a>
-                </p>
-                <p>
-                    <a href="tel:{{client.phone}}">{{client.phone}}</a>
-                </p>
-                <p>{{client.handle}}</p>
-                <p>{{client.styles}}</p>
-            </div>
-        </div>
+<div class="row client-row">
+    <div class="col-md-4 col-sm-12">
+        <img id="client-photo" class="mr-3" alt={{client.name}} src={{client.photo}} width="200" />
+    </div>
+    <div class="col-md-4 col-sm-12">
+        <h5 class="mt-0">
+            {{client.name}}
+        </h5>
+        <p>
+            <a href="mailto:{{client.email}}">{{client.email}}</a>
+        </p>
+        <p>
+            <a href="tel:{{client.phone}}">{{client.phone}}</a>
+        </p>
+        <p>{{client.handle}}</p>
+        <p>{{client.styles}}</p>
+    </div>
+    <div class="col-md-4 col-sm-12">
+        <h5 class="mt-0">
+            Actions
+        </h5>
+        <div>Edit</div>
+        <div>Add image</div>
+        <div>Delete</div>
     </div>
 </div>
 
-<div class="row">
-    <h3>Projects</h3>
+<div class="row image-row">
+    <div class="project-header">Projects</div>
     <ul id="thumbnailsList">
         <li *ngFor="let project of visibleProjects">
             <!-- the routerLink bind results in a URL path like "/project/3" where 3 is the id value for the client of the *ngFor directive -->
