--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,10 +3,14 @@ nav {
     font-family: 'Lato', sans-serif;
 }
 
+.nav-row {
+    background-color: #424242;   
+}
+
 .logo {
     color: #fff;
     font-family: 'Lato', sans-serif;
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
 
 ul.nav a {
