--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="nav-row row">
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="header">
