--- a/src/app/project/project-detail.component.css
+++ b/src/app/project/project-detail.component.css
@@ -1,11 +1,14 @@
 .img-container {
     margin: 24px;
     box-shadow: #555 1px 1px 8px 1px;
-    min-height: 660px;
-    width: 900px;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
     align-content: center;
+    margin: 6px;
+    border: 4px solid #eee;
+    min-width: 100%;
+    min-height: 100%;
 }
 #caption {
     font-size: 1.5em;
@@ -13,20 +16,20 @@
     padding: 18px;
     color: #222;
     border: 1px solid #bbb;
-    width: 900px;
 }
-.caption-row {
-    padding: 24px;
+.detail-row {
+    padding: 18px;
+    text-align: center;
+}
+.img-row {
+    padding: 18px;
     text-align: center;
 }
 ul {
     padding:0;
-    width: 1200px;
     margin: 20px auto
 }
 li {
-    display: inline
-}
-.img-container {
-    background-size: contain
+    display: inline;
+    padding-bottom: 10px;
 }
