--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -13,4 +13,10 @@
             </li>
         </ul>
     </div>
+    <div class="col-md-6 col-sm-12">
+            <h5 class="mt-0">
+                Actions
+            </h5>
+            <div [routerLink]="['/client-create']">Add Client</div>
+        </div>
 </div>
